# galaxy-census-infra

./: .mypy.ini  .pre-commit-config.yaml  README.md  Vagrantfile  cz.toml  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: create-tag.yaml
galaxy_census_infra/: __init__.py
tests/: test_packaging_attribute.py
